[package]
name = "core-trail-endpoint"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "io-util"] }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt"] }
lambda_runtime = "0.8.3"
lambda_http = "0.8.3"

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
chrono = "0.4.30"
