[package]
name = "mytiki-core-trail-endpoint"
version = "3.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "io-util"] }
tokio-util = "0.7.10"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
lambda_runtime = "0.10.0"
lambda_http = "0.10.0"
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
mytiki-core-trail-storage = "0.1.3"
aws-sdk-sqs = "1.15.0"
aws-config = "1.1.7"
num-bigint = "0.4.4"

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
rand = "0.9.0-alpha.1"
uuid = { version = "1.6.1", features = ["v4"] }
